1-core-services/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: "minio.minio-system.svc.cluster.local:9000"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # UI Console
          - path: /minio(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-console
                port:
                  number: 9001
          
          # S3 API - with proper Host header
          - path: /minio_api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  number: 9000
